--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -46,7 +46,6 @@ jobs:
       - name: 🧾 Checkout code
         uses: actions/checkout@v4
 
-      # Avoid ${{ runner.temp }} (it is NOT valid everywhere); use $RUNNER_TEMP instead.
       - name: Compute build paths
         shell: bash
         run: |
@@ -58,6 +57,9 @@ jobs:
           echo "ASC_DIR=$RUNNER_TEMP/asc" >> "$GITHUB_ENV"
           echo "ASC_API_KEY_JSON=$RUNNER_TEMP/api_key.json" >> "$GITHUB_ENV"
           echo "PROFILE_PLIST=$RUNNER_TEMP/profile.plist" >> "$GITHUB_ENV"
+          echo "XCPRETTY_CMD=" >> "$GITHUB_ENV"
+          echo "XCODEBUILD_ARCHIVE_LOG=$RUNNER_TEMP/xcodebuild-archive.log" >> "$GITHUB_ENV"
+          echo "XCODEBUILD_EXPORT_LOG=$RUNNER_TEMP/xcodebuild-export.log" >> "$GITHUB_ENV"
 
       - name: 🧠 Detect JS package manager (Option B)
         id: pm
@@ -73,14 +75,13 @@ jobs:
           else
             echo "manager=yarn" >> "$GITHUB_OUTPUT"
           fi
-          echo "Detected JS package manager: ${{ steps.pm.outputs.manager }}"
+          echo "Detected JS package manager: $(cat "$GITHUB_OUTPUT" | grep -m1 "^manager=" | cut -d= -f2)"
 
       - name: 🟩 Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          # IMPORTANT: don't enable cache unless a lockfile is guaranteed present.
-          # setup-node hard-fails if it can't find yarn.lock / package-lock.json / pnpm-lock.yaml.
+          # IMPORTANT: no cache unless lockfile is guaranteed present (setup-node hard-fails otherwise)
 
       - name: 📦 Install JS deps (lockfile-aware)
         shell: bash
@@ -95,7 +96,7 @@ jobs:
               if [ -f "yarn.lock" ]; then
                 yarn install --frozen-lockfile
               else
-                echo "⚠️ No yarn.lock found; running non-frozen install (commit yarn.lock for deterministic builds)."
+                echo "⚠️ No yarn.lock found; running non-frozen install."
                 yarn install
               fi
               ;;
@@ -148,27 +149,54 @@ jobs:
         with:
           ruby-version: "3.2"
 
-      - name: 💎 Install fastlane/cocoapods/xcpretty (no Gemfile)
+      - name: 💎 Install fastlane/cocoapods (no Gemfile)
         if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
         shell: bash
         run: |
           set -euo pipefail
           gem install fastlane -N
           gem install cocoapods -N
-          gem install xcpretty -N
 
-      - name: 🧰 Install CocoaPods
+      - name: 🧰 Install CocoaPods (with fallback)
         shell: bash
         run: |
           set -euo pipefail
           cd ios
           if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
-            bundle exec pod install --repo-update
+            if bundle exec pod --version >/dev/null 2>&1; then
+              bundle exec pod install --repo-update
+            else
+              echo "⚠️ cocoapods not present in bundle; installing globally as fallback."
+              gem install cocoapods -N
+              pod install --repo-update
+            fi
           else
             pod install --repo-update
           fi
 
-      # Create/unlock keychain (no partition list yet — that fails before the private key exists)
+      # ✅ FIX APPLIED: hard-guarantee xcpretty exists, and set XCPRETTY_CMD correctly
+      - name: 🧾 Ensure xcpretty exists (hard guarantee)
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          # Prefer bundle exec if Gemfile exists and xcpretty is in the bundle.
+          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
+            if bundle exec ruby -S xcpretty --version >/dev/null 2>&1; then
+              echo "XCPRETTY_CMD=bundle exec xcpretty" >> "$GITHUB_ENV"
+              bundle exec ruby -S xcpretty --version || true
+              exit 0
+            fi
+          fi
+
+          # Otherwise ensure it's installed globally.
+          if ! command -v xcpretty >/dev/null 2>&1; then
+            gem install xcpretty -N
+          fi
+
+          xcpretty --version || true
+          echo "XCPRETTY_CMD=xcpretty" >> "$GITHUB_ENV"
+
       - name: 🔐 Create temporary keychain
         shell: bash
         run: |
@@ -180,14 +208,12 @@ jobs:
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
-          # Keep login keychain available too (avoids weird lookups)
           security list-keychains -d user -s "$KEYCHAIN_PATH" "$HOME/Library/Keychains/login.keychain-db"
           security default-keychain -s "$KEYCHAIN_PATH"
 
           echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> "$GITHUB_ENV"
           echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> "$GITHUB_ENV"
 
-      # Import cert first, THEN partition list (otherwise: SecItemCopyMatching not found)
       - name: 🪪 Import signing certificate (p12) + enable codesign access
         shell: bash
         run: |
@@ -203,8 +229,22 @@ jobs:
           fi
 
           CERT_P12="$RUNNER_TEMP/ios_dist.p12"
-          python3 -c "import base64,os; open('${CERT_P12}','wb').write(base64.b64decode(os.environ['IOS_DIST_CERT_BASE64'].strip()))"
-          python3 -c "import os; print('p12 bytes:', os.path.getsize('${CERT_P12}'))"
+          export CERT_P12
+
+          python3 - <<'PY'
+          import os, re, base64, sys
+          s = os.environ.get("IOS_DIST_CERT_BASE64", "")
+          s = re.sub(r"\s+", "", s)
+          try:
+            data = base64.b64decode(s, validate=True)
+          except Exception as e:
+            print("Invalid base64 in IOS_DIST_CERT_BASE64:", e)
+            sys.exit(2)
+          out = os.environ["CERT_P12"]
+          with open(out, "wb") as f:
+            f.write(data)
+          print("p12 bytes:", len(data))
+          PY
 
           security import "$CERT_P12" \
             -k "$KEYCHAIN_PATH" \
@@ -219,7 +259,6 @@ jobs:
           echo "Available signing identities:"
           security find-identity -v -p codesigning "$KEYCHAIN_PATH"
 
-          # Fail if none are found (prevents mysterious signing failures later)
           if ! security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep -qE "\) "; then
             echo "No codesigning identity found in keychain after import."
             exit 1
@@ -239,10 +278,26 @@ jobs:
           mkdir -p "$PP_DIR"
 
           PP_FILE="$RUNNER_TEMP/profile.mobileprovision"
-          python3 -c "import base64,os; open('${PP_FILE}','wb').write(base64.b64decode(os.environ['IOS_PROFILE_BASE64'].strip()))"
-          python3 -c "import os; print('profile bytes:', os.path.getsize('${PP_FILE}'))"
+          export PP_FILE
 
-          # Convert .mobileprovision -> plist (will fail loudly if the decoded file isn't a real profile)
+          python3 - <<'PY'
+          import os, re, base64, sys
+          s = os.environ.get("IOS_PROFILE_BASE64", "")
+          s = re.sub(r"\s+", "", s)
+          try:
+            data = base64.b64decode(s, validate=True)
+          except Exception as e:
+            print("Invalid base64 in IOS_PROFILE_BASE64:", e)
+            sys.exit(2)
+          out = os.environ["PP_FILE"]
+          with open(out, "wb") as f:
+            f.write(data)
+          print("profile bytes:", len(data))
+          if len(data) < 500:
+            print("Decoded provisioning profile is suspiciously small (<500 bytes).")
+            sys.exit(3)
+          PY
+
           /usr/bin/security cms -D -i "$PP_FILE" > "$PROFILE_PLIST"
 
           UUID=$(/usr/libexec/PlistBuddy -c 'Print:UUID' "$PROFILE_PLIST")
@@ -270,10 +325,27 @@ jobs:
 
           mkdir -p "$ASC_DIR"
           ASC_P8_PATH="$ASC_DIR/AuthKey_${APP_STORE_CONNECT_API_KEY_ID}.p8"
+          export ASC_P8_PATH
 
-          python3 -c "import base64,os; open('${ASC_P8_PATH}','wb').write(base64.b64decode(os.environ['APP_STORE_CONNECT_API_KEY_BASE64'].strip()))"
+          python3 - <<'PY'
+          import os, re, base64, sys
+          s = os.environ.get("APP_STORE_CONNECT_API_KEY_BASE64", "")
+          s = re.sub(r"\s+", "", s)
+          try:
+            data = base64.b64decode(s, validate=True)
+          except Exception as e:
+            print("Invalid base64 in APP_STORE_CONNECT_API_KEY_BASE64:", e)
+            sys.exit(2)
+          out = os.environ["ASC_P8_PATH"]
+          with open(out, "wb") as f:
+            f.write(data)
+          print("p8 bytes:", len(data))
+          if len(data) < 100:
+            print("Decoded .p8 key is suspiciously small (<100 bytes).")
+            sys.exit(3)
+          PY
+
           chmod 600 "$ASC_P8_PATH"
-
           echo "ASC_API_KEY_PATH=$ASC_P8_PATH" >> "$GITHUB_ENV"
 
       - name: 🏗️ Build archive (xcodebuild archive)
@@ -282,17 +354,39 @@ jobs:
           set -euo pipefail
           rm -rf "$ARCHIVE_PATH"
 
-          xcodebuild \
-            -workspace "$XCODE_WORKSPACE" \
-            -scheme "$XCODE_SCHEME" \
-            -configuration "$CONFIGURATION" \
-            -sdk iphoneos \
-            -archivePath "$ARCHIVE_PATH" \
-            -destination "generic/platform=iOS" \
-            DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-            archive | xcpretty
+          # Safe pipeline: preserve xcodebuild exit code; xcpretty may SIGPIPE without killing the job.
+          set +o pipefail
+          if [ -n "${XCPRETTY_CMD:-}" ]; then
+            xcodebuild \
+              -workspace "$XCODE_WORKSPACE" \
+              -scheme "$XCODE_SCHEME" \
+              -configuration "$CONFIGURATION" \
+              -sdk iphoneos \
+              -archivePath "$ARCHIVE_PATH" \
+              -destination "generic/platform=iOS" \
+              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+              archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG" | eval "$XCPRETTY_CMD"
+            XC=${PIPESTATUS[0]}
+          else
+            xcodebuild \
+              -workspace "$XCODE_WORKSPACE" \
+              -scheme "$XCODE_SCHEME" \
+              -configuration "$CONFIGURATION" \
+              -sdk iphoneos \
+              -archivePath "$ARCHIVE_PATH" \
+              -destination "generic/platform=iOS" \
+              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+              archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG"
+            XC=${PIPESTATUS[0]}
+          fi
+          set -o pipefail
 
-          test -d "$ARCHIVE_PATH"
+          if [ "${XC:-1}" -eq 0 ] && [ ! -d "$ARCHIVE_PATH" ]; then
+            echo "Archive directory missing at $ARCHIVE_PATH"
+            exit 1
+          fi
+          exit $XC
+
       - name: 🧾 Create ExportOptions.plist (App Store Connect)
         shell: bash
         run: |
@@ -333,6 +427,7 @@ jobs:
           PLIST
 
           /usr/bin/plutil -lint "$EXPORT_OPTIONS_PLIST"
+
       - name: 📤 Export IPA (xcodebuild -exportArchive)
         shell: bash
         run: |
@@ -340,14 +435,30 @@ jobs:
           rm -rf "$EXPORT_DIR"
           mkdir -p "$EXPORT_DIR"
 
-          xcodebuild \
-            -exportArchive \
-            -archivePath "$ARCHIVE_PATH" \
-            -exportPath "$EXPORT_DIR" \
-            -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" | xcpretty
+          set +o pipefail
+          if [ -n "${XCPRETTY_CMD:-}" ]; then
+            xcodebuild \
+              -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath "$EXPORT_DIR" \
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
+            XC=${PIPESTATUS[0]}
+          else
+            xcodebuild \
+              -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath "$EXPORT_DIR" \
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG"
+            XC=${PIPESTATUS[0]}
+          fi
+          set -o pipefail
 
-          ls -la "$EXPORT_DIR"
-          test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
+          if [ "${XC:-1}" -eq 0 ]; then
+            ls -la "$EXPORT_DIR"
+            test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
+          fi
+
+          exit $XC
 
       - name: 🚀 Upload to TestFlight (fastlane pilot)
         shell: bash
@@ -362,14 +473,12 @@ jobs:
           import os, json
           with open(os.environ["ASC_API_KEY_PATH"], "r", encoding="utf-8") as f:
             key = f.read()
-
           payload = {
             "key_id": os.environ["APP_STORE_CONNECT_API_KEY_ID"],
             "issuer_id": os.environ["APP_STORE_CONNECT_API_KEY_ISSUER_ID"],
             "key": key,
             "in_house": False
           }
-
           with open(os.environ["ASC_API_KEY_JSON"], "w", encoding="utf-8") as f:
             json.dump(payload, f)
           PY
@@ -399,6 +508,8 @@ jobs:
             ${{ env.ARCHIVE_INFO_PLIST }}
             ${{ env.ARCHIVE_PATH }}
             ${{ env.EXPORT_DIR }}
+            ${{ env.XCODEBUILD_ARCHIVE_LOG }}
+            ${{ env.XCODEBUILD_EXPORT_LOG }}
 
       - name: 🧹 Cleanup keychain
         if: always()
