--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -75,13 +75,12 @@ jobs:
           else
             echo "manager=yarn" >> "$GITHUB_OUTPUT"
           fi
-          echo "Detected JS package manager: $(cat "$GITHUB_OUTPUT" | grep -m1 "^manager=" | cut -d= -f2)"
+          echo "Detected JS package manager: ${{ steps.pm.outputs.manager }}"
 
       - name: 🟩 Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          # IMPORTANT: no cache unless lockfile is guaranteed present (setup-node hard-fails otherwise)
 
       - name: 📦 Install JS deps (lockfile-aware)
         shell: bash
@@ -174,13 +173,11 @@ jobs:
             pod install --repo-update
           fi
 
-      # ✅ FIX APPLIED: hard-guarantee xcpretty exists, and set XCPRETTY_CMD correctly
       - name: 🧾 Ensure xcpretty exists (hard guarantee)
         shell: bash
         run: |
           set -euo pipefail
 
-          # Prefer bundle exec if Gemfile exists and xcpretty is in the bundle.
           if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
             if bundle exec ruby -S xcpretty --version >/dev/null 2>&1; then
               echo "XCPRETTY_CMD=bundle exec xcpretty" >> "$GITHUB_ENV"
@@ -189,7 +186,6 @@ jobs:
             fi
           fi
 
-          # Otherwise ensure it's installed globally.
           if ! command -v xcpretty >/dev/null 2>&1; then
             gem install xcpretty -N
           fi
@@ -246,13 +242,7 @@ jobs:
           print("p12 bytes:", len(data))
           PY
 
-          security import "$CERT_P12" \
-            -k "$KEYCHAIN_PATH" \
-            -P "$IOS_DIST_CERT_PASSWORD" \
-            -T /usr/bin/codesign \
-            -T /usr/bin/security \
-            -T /usr/bin/xcodebuild \
-            -T /usr/bin/productbuild
+          security import "$CERT_P12"             -k "$KEYCHAIN_PATH"             -P "$IOS_DIST_CERT_PASSWORD"             -T /usr/bin/codesign             -T /usr/bin/security             -T /usr/bin/xcodebuild             -T /usr/bin/productbuild
 
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
@@ -354,29 +344,12 @@ jobs:
           set -euo pipefail
           rm -rf "$ARCHIVE_PATH"
 
-          # Safe pipeline: preserve xcodebuild exit code; xcpretty may SIGPIPE without killing the job.
           set +o pipefail
           if [ -n "${XCPRETTY_CMD:-}" ]; then
-            xcodebuild \
-              -workspace "$XCODE_WORKSPACE" \
-              -scheme "$XCODE_SCHEME" \
-              -configuration "$CONFIGURATION" \
-              -sdk iphoneos \
-              -archivePath "$ARCHIVE_PATH" \
-              -destination "generic/platform=iOS" \
-              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-              archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG" | eval "$XCPRETTY_CMD"
+            xcodebuild               -workspace "$XCODE_WORKSPACE"               -scheme "$XCODE_SCHEME"               -configuration "$CONFIGURATION"               -sdk iphoneos               -archivePath "$ARCHIVE_PATH"               -destination "generic/platform=iOS"               DEVELOPMENT_TEAM="$APPLE_TEAM_ID"               archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG" | eval "$XCPRETTY_CMD"
             XC=${PIPESTATUS[0]}
           else
-            xcodebuild \
-              -workspace "$XCODE_WORKSPACE" \
-              -scheme "$XCODE_SCHEME" \
-              -configuration "$CONFIGURATION" \
-              -sdk iphoneos \
-              -archivePath "$ARCHIVE_PATH" \
-              -destination "generic/platform=iOS" \
-              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-              archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG"
+            xcodebuild               -workspace "$XCODE_WORKSPACE"               -scheme "$XCODE_SCHEME"               -configuration "$CONFIGURATION"               -sdk iphoneos               -archivePath "$ARCHIVE_PATH"               -destination "generic/platform=iOS"               DEVELOPMENT_TEAM="$APPLE_TEAM_ID"               archive 2>&1 | tee "$XCODEBUILD_ARCHIVE_LOG"
             XC=${PIPESTATUS[0]}
           fi
           set -o pipefail
@@ -392,39 +365,26 @@ jobs:
         run: |
           set -euo pipefail
 
-          # Xcode 16+ expects "app-store-connect" for App Store Connect distribution.
-          cat > "$EXPORT_OPTIONS_PLIST" <<'PLIST'
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-            <key>method</key>
-            <string>app-store-connect</string>
-            <key>teamID</key>
-            <string>${APPLE_TEAM_ID}</string>
+          python3 - <<'PY'
+          import os, plistlib
 
-            <key>signingStyle</key>
-            <string>manual</string>
+          export_options = {
+            "method": "app-store-connect",
+            "teamID": os.environ["APPLE_TEAM_ID"],
+            "signingStyle": "manual",
+            "provisioningProfiles": {
+              os.environ["APP_IDENTIFIER"]: os.environ["PROFILE_NAME"]
+            },
+            "uploadSymbols": True,
+            "uploadBitcode": False,
+            "compileBitcode": False,
+            "stripSwiftSymbols": True,
+            "manageAppVersionAndBuildNumber": True,
+          }
 
-            <key>provisioningProfiles</key>
-            <dict>
-              <key>${APP_IDENTIFIER}</key>
-              <string>${PROFILE_NAME}</string>
-            </dict>
-
-            <key>uploadSymbols</key>
-            <true/>
-            <key>uploadBitcode</key>
-            <false/>
-            <key>compileBitcode</key>
-            <false/>
-            <key>stripSwiftSymbols</key>
-            <true/>
-            <key>manageAppVersionAndBuildNumber</key>
-            <true/>
-          </dict>
-          </plist>
-          PLIST
+          with open(os.environ["EXPORT_OPTIONS_PLIST"], "wb") as f:
+            plistlib.dump(export_options, f)
+          PY
 
           /usr/bin/plutil -lint "$EXPORT_OPTIONS_PLIST"
 
@@ -437,18 +397,10 @@ jobs:
 
           set +o pipefail
           if [ -n "${XCPRETTY_CMD:-}" ]; then
-            xcodebuild \
-              -exportArchive \
-              -archivePath "$ARCHIVE_PATH" \
-              -exportPath "$EXPORT_DIR" \
-              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
+            xcodebuild               -exportArchive               -archivePath "$ARCHIVE_PATH"               -exportPath "$EXPORT_DIR"               -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
             XC=${PIPESTATUS[0]}
           else
-            xcodebuild \
-              -exportArchive \
-              -archivePath "$ARCHIVE_PATH" \
-              -exportPath "$EXPORT_DIR" \
-              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG"
+            xcodebuild               -exportArchive               -archivePath "$ARCHIVE_PATH"               -exportPath "$EXPORT_DIR"               -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG"
             XC=${PIPESTATUS[0]}
           fi
           set -o pipefail
@@ -484,17 +436,9 @@ jobs:
           PY
 
           if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
-            bundle exec fastlane pilot upload \
-              --api_key_path "$ASC_API_KEY_JSON" \
-              --ipa "$IPA_PATH" \
-              --skip_waiting_for_build_processing true \
-              --changelog "$RELEASE_NOTES"
+            bundle exec fastlane pilot upload               --api_key_path "$ASC_API_KEY_JSON"               --ipa "$IPA_PATH"               --skip_waiting_for_build_processing true               --changelog "$RELEASE_NOTES"
           else
-            fastlane pilot upload \
-              --api_key_path "$ASC_API_KEY_JSON" \
-              --ipa "$IPA_PATH" \
-              --skip_waiting_for_build_processing true \
-              --changelog "$RELEASE_NOTES"
+            fastlane pilot upload               --api_key_path "$ASC_API_KEY_JSON"               --ipa "$IPA_PATH"               --skip_waiting_for_build_processing true               --changelog "$RELEASE_NOTES"
           fi
 
       - name: 📎 Upload build artifacts
